[package]
name = "rust_gtk4_njord"
version = "0.1.0"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
edition = "2021"
rust-version = "1.76"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_12"] }
njord = { version = "0.3.0", features = ["sqlite"] }
njord_derive = { version = "0.3.0" }
